--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "jsdom": "^21.1.1",
     "prettier": "^2.8.7",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
